--- a/jobkarleapp/templates/FresherRigister.html
+++ b/jobkarleapp/templates/FresherRigister.html
@@ -80,7 +80,7 @@
       <div class="row">
   
         <!--Grid column-->
-        <div class="col-md-6 mb-4 mb-md-0 mt-3">
+        <div class="col-md-6 m-auto">
          <div class="row m-auto" style="width: max-content;">
            <div class="">
             <div class="carde card m-1">
@@ -110,9 +110,9 @@
           <a href="#" class="mx-1" role="button"><i class="fab fa-youtube"></i></a>
           <a href="#" class="mx-1" role="button"><i class="fab fa-github"></i></a>
           <a href="#" class="mx-1" role="button"><i class="fab fa-stack-overflow"></i></a>
-          <div class="m-auto" style="position: absolute; bottom:20%; left:31%;">
+          <!-- <div class="m-auto" style="position: absolute; bottom:20%; left:31%;">
             {% include 'logo.html' %}
-          </div>
+          </div> -->
        
         </div>
         <!--Grid column-->
@@ -153,20 +153,20 @@
           <div class="card text-center #f0f4c3 lime lighten-4 text-white">
             <div class="card-body">
               <p class="mt-4 pt-2 card m-auto #cfd8dc blue-grey lighten-4" style="width: max-content;"><i class="far fa-object-ungroup fa-4x"></i></p>
-              <h5 class="font-weight-bold my-4 py-2" style="color:black;"><a href="#">JOBS FOR YOU</a></h5>
-              <p class="mb-4">Stand out as an Early Applicant with instant access to jobs
-                Use SVCE Recruitments Application expert advantage to get handpicked jobs in your inbox </>
+              <h5 class="font-weight-bold my-4 py-2" style="font-weight: bold; color:black;">JOBS FOR YOU</h5>
+              <p class="mb-4" style="font-weight: bold; color:rgba(0, 0, 0, 0.664);">Stand out as an Early Applicant with instant access to jobs
+                Use <u><mark>Jobkarle.com</mark></u>  Application expert advantage to get handpicked jobs in your inbox </>
             </div>
           </div>
         </div>
   
         <div class="col-md-6 col-xl-3 mb-4">
-          <div class="card text-center #b2ebf2 cyan lighten-4">
+          <div class="card text-center">
             <div class="card-body">
-              <p class="mt-4 pt-2 card m-auto #ffca28 amber lighten-1" style="width: max-content;"><i class="fas fa-mobile-alt fa-4x grey-text"></i></p>
-              <h5 class="font-weight-bold my-4 py-2" style="color:black;"><a href="#">Recruiters Search</a></h5>
-              <p class="text-muted mb-4">Not getting enough profile views?</p>
-              <p class="text-muted mb-4">
+              <p class="mt-4  card m-auto " style="width: max-content;"><i class="fas fa-mobile-alt fa-4x grey-text"></i></p>
+              <h5 class="font-weight-bold my-4 py-2" style="font-weight: bold; color:black;">Recruiters Search</h5>
+              <p class="text-muted mb-4" style="font-weight: bold; color:rgba(0, 0, 0, 0.664);">Not getting enough profile views?</p>
+              <p class="text-muted mb-4" style="font-weight: bold; color:rgba(0, 0, 0, 0.664);">
 
                 Get a Featured Profile and increase your visibility to recruiters up to 3 times</p>
             </div>
@@ -177,18 +177,21 @@
           <div class="card text-center #e1bee7 purple lighten-4 text-white">
             <div class="card-body">
               <p class="mt-4 pt-2 card m-auto #ffab91 deep-orange lighten-3" style="width: max-content;"><i class="fas fa-chart-line fa-4x"></i></p>
-              <h5 class="font-weight-bold my-4 py-2" style="color:black;"><a href="#">Companys Info</a></h5>
-              <p class="mb-4">SV Colleges tied with Multi National Companies and as well as StartUp Companies soo students can get all the information about they required comapnies </p>
+              <h5 class="font-weight-bold my-4 py-2" style="font-weight: bold; color:black;" >Companys Info</h5>
+              <p class="mb-4" style="font-weight: bold; color:rgba(0, 0, 0, 0.664);"><u><mark>Jobkarle.com</mark></u>  tied with Multi National Companies and as well as StartUp Companies soo students can get all the information about they required comapnies </p>
             </div>
           </div>
         </div>
   
         <div class="col-md-6 col-xl-3">
-          <div class="card text-center #f8bbd0 pink lighten-4">
+          <div class="card text-center">
             <div class="card-body">
               <p class="mt-4 pt-2 card m-auto" style="width: max-content;"><i class="fas fa-bullhorn fa-4x grey-text"></i></p>
-              <h5 class="font-weight-bold my-4 py-2" style="color:black;"><a href="#">Premium Package</a></h5>
-              <p class="text-muted mb-4">Premium membership will only do the following: 1) Your profile visibility to employers will increase. 2) You will receive job offers at regular intervals through sms ...</p>
+              <h5 class="font-weight-bold my-4 py-2" style="font-weight: bold; color:black;">Premium Package</h5>
+              <p class="text-muted m-0"style="font-weight: bold; color:rgba(0, 0, 0, 0.664);">Premium membership will only do the following: </p>
+              <p class="text-muted m-0"style="font-weight: bold; color:rgba(0, 0, 0, 0.664);"> 1.Your profile visibility to employers will increase. </p>
+              <p class="text-muted m-0"style="font-weight: bold; color:rgba(0, 0, 0, 0.664);"> 2.You will receive job offers at regular intervals through sms </p>
+
             </div>
           </div>
         </div>
@@ -220,7 +223,7 @@
           Card content
       </div> -->
   <!-- Footer -->
-<footer class="page-footer font-small #d1c4e9 deep-purple lighten-4">
+<footer class="page-footer font-small ">
 
   <!-- Footer Links -->
   <div class="container text-center text-md-left">
@@ -246,16 +249,16 @@
       <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
         <h6 class="text-uppercase mb-4 font-weight-bold">Products</h6>
         <p>
-          <a href="#!">MDBootstrap</a>
+          <a >MDBootstrap</a>
         </p>
         <p>
-          <a href="#!">MDWordPress</a>
+          <a>MDWordPress</a>
         </p>
         <p>
-          <a href="#!">BrandFlow</a>
+          <a>BrandFlow</a>
         </p>
         <p>
-          <a href="#!">Bootstrap Angular</a>
+          <a>Bootstrap Angular</a>
         </p>
       </div>
       <!-- Grid column -->
@@ -266,16 +269,16 @@
       <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
         <h6 class="text-uppercase mb-4 font-weight-bold">Useful links</h6>
         <p>
-          <a href="#!">Your Account</a>
+          <a style="color: black;">Your Account</a>
         </p>
         <p>
-          <a href="#!">Become an Affiliate</a>
+          <a>Become an Affiliate</a>
         </p>
         <p>
-          <a href="#!">Shipping Rates</a>
+          <a>Shipping Rates</a>
         </p>
         <p>
-          <a href="#!">Help</a>
+          <a>Help</a>
         </p>
       </div>
 
@@ -309,7 +312,7 @@
 
         <!--Copyright-->
         <p class="text-center text-md-left">© 2020 Copyright:
-          <a href="https://mdbootstrap.com/">
+          <a>
             <strong> JOBKARLE.com</strong>
           </a>
         </p>
