--- a/jobkarleapp/templates/userpage.html
+++ b/jobkarleapp/templates/userpage.html
@@ -42,20 +42,29 @@
     transition: 0.3s;
     border-radius: 5px;
   }
+  @-moz-document url-prefix() { 
+    .main-body {
+      position:absolute;
+      top:65px;
+
+    }
+  }
+
+
 </style>
 <body>
-  <section class="main-body" id="push" style="position: relative; bottom:220px;">
+  <section class="main-body m-0 p-0" id="push" style="position: relative; bottom:160px;">
     {% if obj %}
     <section class=" card col-sm-9 m-auto #f5f5f5 grey lighten-4" id="job_button_status">
       
         <div class="row">
           <div class="coll-sm-1">
-            <div class="p-2 m-2 #c5e1a5 light-green lighten-3" style="width: max-content;">
+            <div class="p-2 m-1 #c5e1a5 light-green lighten-3" style="width: max-content;">
               <img src="{% static 'rigth.png' %}" class="m-auto" width="20" id="img-companys" > 
             </div>
           </div>
-        <div class="applied-allert m-auto col-sm-10">
-         <h4 class="m-auto" style=" color: green; width:max-content;"><span style="color: black;">{{user_data.username}}</span> {% for message in messages %} {{message}} {% endfor %} <pan style="color:#3c98ed;">{{obj.Skills}}</pan> in <span class="lighten-3">{{obj.CompanyName}}</span></h4>
+        <div class="applied-allert m-auto col-sm-11">
+         <h4 class="m-auto float-left" style=" color: green; width:max-content;"><span style="color: black;">{{user_data.username}}</span> {% for message in messages %} {{message}} {% endfor %} <pan style="color:#3c98ed;">{{obj.Skills}}</pan> in <span class="lighten-3">{{obj.CompanyName}}</span></h4>
         </div>
       
     </section>
